fixed the animation bug that covers up other buttons

--- a/app/assets/stylesheets/_notification.css.scss
+++ b/app/assets/stylesheets/_notification.css.scss
@@ -4,7 +4,6 @@
     z-index: 100;
     top: 0;
     left: 200px;
-    right: 0;
     padding-left: 24px;
     padding-top: 20px;
     background-color: rgba(255, 255, 255, 0);
@@ -20,10 +19,12 @@
     0%,100% { opacity: 0; }
     10% { opacity: 1; }
     70% { opacity: 1;}
+    100% {display: none}
   }
 
 @keyframes fadeInOut {
     0%,100% { opacity: 0; }
     10% { opacity: 1; }
     70% { opacity: 1;}
+    100% {display: none}
   }
